lib/base64/ff_base64.h

#pragma once

#include <stdint.h>
#include <stdbool.h>

bool ff_base64_encoded_len_is_valid(uint16_t encoded_len);

uint16_t ff_base64_encoded_len(uint16_t decoded_len);

uint16_t ff_base64_decoded_len(uint16_t encoded_len);

bool ff_base64_encoded_message_has_valid_chars(uint8_t *src, uint16_t src_len);

void ff_base64_encode(uint8_t *dest, uint8_t *src, uint16_t src_len);

void ff_base64_decode(uint8_t *dest, uint8_t *src, uint16_t src_len);